# Qt5xlsx

./: CMakeLists.txt
Xlsx Style/: .gitignore  CMakeLists.txt
Xlsx Style/src/: main.cc
documentproperty/src/: main.cc
src/: main.cc  report.cc  report.h
worksheet/src/: main.cc
